# webinardump

./: AUTHORS  CHANGELOG.md  README.md  README.rst  pyproject.toml  ruff.toml  webinar.py  webinarru.py
.github/workflows/: python-package.yml
src/webinardump/: cli.py  utils.py
src/webinardump/dumpers/: __init__.py  base.py  webinarru.py  yadisk.py
tests/: conftest.py  test_basic.py  test_utils.py
tests/datafixtures/: empty.ts  manifest_webinarru.json  manifest_yadisk.html  vid.m3u  yadisk_get_video_streams.json  yadisk_shared_page.html
tools/: debug.py
